--- a/taskmaster-starter/assets/css/style.css
+++ b/taskmaster-starter/assets/css/style.css
@@ -1,7 +1,3 @@
-ul.list-group {
-  min-height: 130px;
-}
-
 body {
   font-family: "Open Sans", sans-serif;
 }
@@ -13,6 +9,10 @@ h4,
 h5,
 h6 {
   font-family: "Staatliches", sans-serif;
+}
+
+ul.list-group {
+  min-height: 130px;
 }
 
 .dropover {
@@ -28,7 +28,7 @@ h6 {
   color: #f1f1f1;
   font-size: 2.3rem;
   font-family: "Staatliches", sans-serif;
-  transform: translateY(150px);
+  transform: translateY(100%);
   transition: all 0.5s ease-in-out;
   background-color: rgba(234, 0, 39, 0.7);
 }
@@ -45,9 +45,8 @@ h6 {
 .btn-add,
 .btn-save {
   background-color: #fa8bff;
-  background-image: linear-gradient(45deg, #fa8bff 0%, #2bd2ff 52%, #2bff88 90%);
+  background-image: linear-gradient(0deg, #fa8bff 0%, #2bd2ff 52%, #2bff88 100%);
   transition: all 0.5s ease-out;
-  /* height: 38px; */
   background-size: 1px 100px;
   background-position: 0 -10px;
 }
